crates/zynk-macros/tests/expand/upload_sync_fn.rs
use zynk_macros::upload;

pub struct UploadFile;

#[upload]
fn upload_avatar(file: UploadFile) -> String {
    let _ = file;
    String::from("avatar")
}

fn main() {}
